<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    android:orientation="vertical"
    tools:context=".activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/et_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/username"
            android:background="@drawable/form_bg"
            android:paddingVertical="10dp"
            android:paddingHorizontal="15dp"/>

        <TextView
            android:id="@+id/tv_register_username_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:visibility="gone"
            android:textAlignment="textEnd"
            android:text="@string/username_empty"
            android:textSize="12sp"
            android:textColor="@color/danger"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/et_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/password"
            android:background="@drawable/form_bg"
            android:paddingVertical="10dp"
            android:paddingHorizontal="15dp"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/tv_register_password_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:visibility="gone"
            android:textAlignment="textEnd"
            android:text="@string/password_empty"
            android:textSize="12sp"
            android:textColor="@color/danger"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/et_register_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/confirm"
            android:background="@drawable/form_bg"
            android:paddingVertical="10dp"
            android:paddingHorizontal="15dp"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/tv_register_confirm_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:visibility="gone"
            android:textAlignment="textEnd"
            android:text="@string/confirm_not_same"
            android:textSize="12sp"
            android:textColor="@color/danger"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/et_register_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/phone"
            android:background="@drawable/form_bg"
            android:paddingVertical="10dp"
            android:paddingHorizontal="15dp"
            android:inputType="number"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/tv_register_phone_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:visibility="gone"
            android:textAlignment="textEnd"
            android:text="@string/phone_1012"
            android:textSize="12sp"
            android:textColor="@color/danger"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/ll_register_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="30dp"
            android:paddingHorizontal="0dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/et_register_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_bg"
                android:hint="@string/dob"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp" />

            <ImageView
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:padding="7.5dp"
                android:layout_marginStart="-50dp"
                android:src="@drawable/ic_date_24"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_register_date_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:visibility="gone"
            android:textAlignment="textEnd"
            android:text="@string/dob_not_filled"
            android:textSize="12sp"
            android:textColor="@color/danger"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="30dp"
            android:paddingHorizontal="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/gender"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center_vertical"/>

            <RadioGroup
                android:id="@+id/rg_register_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end"
                android:checkedButton="@id/rb_register_male">

                <RadioButton
                    android:id="@+id/rb_register_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginVertical="5dp"
                    android:paddingHorizontal="25dp"
                    android:text="@string/male"
                    android:textStyle="bold"
                    android:button="@android:color/transparent"
                    android:background="@drawable/radio_selector"
                    android:textColor="@drawable/text_color"
                    android:elevation="2.5dp"/>

                <RadioButton
                    android:id="@+id/rb_register_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/female"
                    android:textStyle="bold"
                    android:button="@android:color/transparent"
                    android:background="@drawable/radio_selector"
                    android:textColor="@drawable/text_color"
                    android:elevation="2.5dp"/>

            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_register_gender_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:visibility="gone"
            android:textAlignment="textEnd"
            android:text="@string/gender_not_selected"
            android:textSize="12sp"
            android:textColor="@color/danger"
            android:textStyle="bold"/>

        <CheckBox
            android:id="@+id/cb_register_agree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/agree_terms"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:buttonTint="@color/blue_3"/>

        <TextView
            android:id="@+id/tv_register_agree_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:visibility="gone"
            android:text="@string/agree_must"
            android:textSize="12sp"
            android:textColor="@color/danger"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_register_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/form_bg"
            android:backgroundTint="@color/blue_3"
            android:textColor="@color/white"
            android:text="@string/create_account"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:text="@string/have_account"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_back_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:background="#00FFFFFF"
            android:textColor="@color/white"
            android:text="@string/login"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAllCaps="false"/>

    </LinearLayout>

</ScrollView>