<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/username"
            android:background="@drawable/form_bg"
            android:paddingVertical="10dp"
            android:paddingHorizontal="15dp"/>

        <TextView
            android:id="@+id/tv_username_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:visibility="gone"
            android:textAlignment="textEnd"
            android:text="@string/username_empty"
            android:textSize="12sp"
            android:textColor="@color/danger"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/password"
            android:background="@drawable/form_bg"
            android:paddingVertical="10dp"
            android:paddingHorizontal="15dp"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/tv_password_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:visibility="gone"
            android:textAlignment="textEnd"
            android:text="@string/password_empty"
            android:textSize="12sp"
            android:textColor="@color/danger"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_login_failed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            android:text="@string/login_failed"
            android:textSize="16sp"
            android:textColor="@color/danger"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/form_bg"
            android:enabled="false"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:text="@string/no_account"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:background="#00FFFFFF"
            android:textColor="@color/white"
            android:text="@string/create_account"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAllCaps="false"/>

    </LinearLayout>

</RelativeLayout>