<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="15dp"
        app:cardCornerRadius="10dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/not_enough"
                android:textColor="@color/danger"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="125dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/x_button"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/please_top_up"
                android:textAlignment="center"
                android:textSize="13sp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/btn_bg"
                android:backgroundTint="@color/danger"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAllCaps="false"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>