<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProductDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/ic_baseline_videogame_asset_24"
                app:tint="@color/white"
                android:background="@color/blue_2"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:titleTextColor="@color/white"
                />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="15dp"
            android:paddingVertical="5dp"
            android:text="@string/product"
            android:textSize="25sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="15dp"
            android:paddingVertical="5dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_indonesian_rupiah"/>

            <TextView
                android:id="@+id/tv_detail_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/price"
                android:textSize="21sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="15dp"
            android:paddingVertical="5dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_people_alt_24" />

            <TextView
                android:id="@+id/tv_detail_min_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/price"
                android:textSize="21sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_show_location"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:contentPadding="0dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/grey"
            android:layout_marginEnd="7.5dp"
            app:cardElevation="0dp">

            <ImageButton
                android:id="@+id/ib_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_location_on_24"
                android:backgroundTint="@android:color/transparent"
                android:tint="@color/white"
                android:elevation="0dp"/>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/form_bg"
            android:text="@string/buy"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>

</RelativeLayout>